# corgiterm

./: .gitignore  AGENT.md  AGENTS.md  AI_LEARNING_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md  RESIZE_ANALYSIS.md  ROADMAP.md  SHORTCUTS_IMPLEMENTATION.md  dev.corgiterm.CorgiTerm.yml  resize_quick_fix.patch  resize_solution.rs
.github/workflows/: ci.yml
.swarm/: memory.db-shm  memory.db-wal
assets/: dev.corgiterm.CorgiTerm.desktop  dev.corgiterm.CorgiTerm.metainfo.xml
crates/corgiterm-ai/: Cargo.toml  MCP_ARCHITECTURE.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md
crates/corgiterm-ai/examples/: mcp_demo.rs
crates/corgiterm-ai/src/: completions.rs  conversation.rs  history.rs  learning.rs  lib.rs  mcp.rs  models.rs  natural_language.rs  providers.rs
crates/corgiterm-config/: Cargo.toml
crates/corgiterm-config/src/: lib.rs  schema.rs  shortcuts.rs  themes.rs
crates/corgiterm-config/tests/: fixtures_contract.rs
crates/corgiterm-core/: Cargo.toml
crates/corgiterm-core/src/: ascii_art.rs  engine.rs  error.rs  hints.rs  history.rs  history_learning.rs  images.rs  learning.rs  lib.rs  pty.rs  recording.rs  safe_mode.rs  session.rs  terminal.rs
crates/corgiterm-core/tests/: pty_smoke.rs
crates/corgiterm-plugins/: Cargo.toml
crates/corgiterm-plugins/src/: api.rs  lib.rs  loader.rs  lua_runtime.rs  wasm_runtime.rs
crates/corgiterm-terminal/: Cargo.toml
crates/corgiterm-terminal/src/: ansi.rs  cell.rs  grid.rs  lib.rs  parser.rs  renderer.rs  selection.rs
crates/corgiterm-ui/: Cargo.toml
crates/corgiterm-ui/src/: ai_panel.rs  app.rs  ascii_art_dialog.rs  broadcast.rs  dialogs.rs  document_view.rs  emoji_picker.rs  history_search.rs  keyboard.rs  lib.rs  recording_panel.rs  sidebar.rs  snippets.rs  split_pane.rs  ssh_manager.rs  style.css  tab_bar.rs  terminal_view.rs  theme.rs  theme_creator.rs  widgets.rs  window.rs
crates/corgiterm-ui/src/widgets/: natural_language_input.rs  safe_mode_preview.rs  session_thumbnail.rs
docs/: AI_LEARNING.md  ASCII_ART_GENERATOR.md  SHORTCUTS_QUICK_REFERENCE.md  keyboard-shortcuts.md
docs/archive/: IMPLEMENTATION_SUMMARY.md  PANE_TREE_DIAGRAM.md  SNIPPETS_IMPLEMENTATION.md  SPLIT_PANE_IMPLEMENTATION.md
docs/examples/: custom-shortcuts-example.toml  keyboard-shortcuts.toml
docs/features/: SNIPPETS.md
docs/plans/: terminal-rebuild-plan.md
docs/roadmap/: implementation-backlog.md
docs/specs/: beginner-experience-spec.md  current-feature-audit.md  documentation-index.md  feature-completion-spec.md  release-readiness-checklist.md  test-verification-strategy.md
examples/: ai_learning_demo.rs  snippets-demo.json  test_ascii_fonts.rs
flatpak/: README.md  cargo-sources.json  dev.corgiterm.CorgiTerm.desktop  dev.corgiterm.CorgiTerm.metainfo.xml  dev.corgiterm.CorgiTerm.yml  generate-cargo-sources.py
macos/: Info.plist  build-app.sh  create-dmg.sh  create-icns-pillow.py  create-icns.sh
scripts/: build-flatpak.sh  build.sh  check-docs.sh  install-icons.sh  install-macos.sh  install.sh  terminal-torture.sh
src/: main.rs
tests/fixtures/ai/: mock-provider-responses.json
tests/fixtures/recordings/: sample-recording.json
tests/fixtures/snippets/: sample-snippets.json
tests/fixtures/ssh/: config.sample
