[package]
name = "corgiterm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core terminal emulation engine for CorgiTerm"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
vte.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true

# PTY handling
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
libc = "0.2"

# Unicode handling
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Pattern matching
regex.workspace = true

# Image processing for ASCII art
image = "0.25"

# Base64 for Kitty graphics protocol
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
